semantic segmentation training and dataset class

--- a/stream-1/visualize_spark.ipynb
+++ b/stream-1/visualize_spark.ipynb
@@ -140,14 +140,14 @@
     "num_classes = len(class_map) + 1\n",
     "\n",
     "# pretrained mask r-cnn\n",
-    "model = torchvision.models.detection.maskrcnn_resnet50_fpn(weights=\"DEFAULT\")\n",
+    "model_det = torchvision.models.detection.maskrcnn_resnet50_fpn(weights=\"DEFAULT\")\n",
     "\n",
     "# fix amount of classes (coco pretrained model has 80 outputs)\n",
-    "in_features = model.roi_heads.box_predictor.cls_score.in_features\n",
-    "model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
+    "in_features = model_det.roi_heads.box_predictor.cls_score.in_features\n",
+    "model_det.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
     "\n",
-    "in_features_mask = model.roi_heads.mask_predictor.conv5_mask.in_channels\n",
-    "model.roi_heads.mask_predictor = MaskRCNNPredictor(in_features_mask, 256, num_classes)"
+    "in_features_mask = model_det.roi_heads.mask_predictor.conv5_mask.in_channels\n",
+    "model_det.roi_heads.mask_predictor = MaskRCNNPredictor(in_features_mask, 256, num_classes)"
    ]
   },
   {
@@ -159,21 +159,21 @@
     "from tqdm import tqdm\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model.to(device)\n",
+    "model_det.to(device)\n",
     "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
+    "optimizer = torch.optim.Adam(model_det.parameters(), lr=1e-4)\n",
     "\n",
     "num_epochs = 20\n",
     "\n",
     "for epoch in range(num_epochs):\n",
-    "    model.train()\n",
+    "    model_det.train()\n",
     "    total_loss = 0\n",
     "\n",
     "    for imgs, samples in tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\", leave=True):\n",
     "        imgs = [img.to(device) for img in imgs]\n",
     "        samples = [{k: v.to(device) for k, v in t.items()} for t in samples]\n",
     "\n",
-    "        loss_dict = model(imgs, samples)\n",
+    "        loss_dict = model_det(imgs, samples)\n",
     "        loss = sum(loss_dict.values())\n",
     "\n",
     "        optimizer.zero_grad()\n",
@@ -191,11 +191,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.eval()\n",
+    "model_det.eval()\n",
     "with torch.no_grad():\n",
     "    for imgs, targets in val_loader:\n",
     "        imgs = [img.to(device) for img in imgs]\n",
-    "        predictions = model(imgs)\n",
+    "        predictions = model_det(imgs)\n",
     "        break"
    ]
   },
@@ -227,6 +227,92 @@
     "plt.gca().add_patch(plt.Rectangle((x1,y1), x2-x1, y2-y1,\n",
     "                                  fill=False, edgecolor='red'))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PART 2\n",
+    "our dataset has colorcoded segments embedded in images, so ill crop out the bounding boxes and use a pre-implemented u-net model.\n",
+    "\n",
+    "In `utils.py` we have:\n",
+    "- hashmap for mapping colors to labels\n",
+    "- utility function for converting the mask colors from the data to labels\n",
+    "- new dataset class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import PART_COLOR_MAP\n",
+    "import segmentation_models_pytorch as smp\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "num_classes = len(PART_COLOR_MAP) + 1 # new class amount (2)\n",
+    "\n",
+    "model_unet = smp.Unet(\n",
+    "    encoder_name=\"resnet34\", # architecture\n",
+    "    encoder_weights=\"imagenet\", # pretrained weights\n",
+    "    in_channels=3,\n",
+    "    classes=num_classes\n",
+    ").to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "loss function: CrossEntropy because after some research i found that it is the standard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.AdamW(model_unet.parameters(), lr=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs = 20\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model_unet.train()\n",
+    "    total_loss = 0\n",
+    "\n",
+    "    for imgs, masks in tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\", leave=True):\n",
+    "        imgs = imgs.to(device)\n",
+    "        masks = masks.to(device)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        preds = model_unet(imgs)\n",
+    "        loss = criterion(preds, masks)\n",
+    "\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        total_loss += loss.item()\n",
+    "\n",
+    "    print(f\"Epoch {epoch+1}: loss: {total_loss:.4f}\")"
    ]
   }
  ],
