--- a/stream-1/visualize_spark.ipynb
+++ b/stream-1/visualize_spark.ipynb
@@ -280,6 +280,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import PyTorchSegmentationDataset\n",
+    "\n",
+    "train_dataset = PyTorchSegmentationDataset(class_map, root_dir=dataset_root_dir,split=\"train\")\n",
+    "val_dataset = PyTorchSegmentationDataset(class_map, root_dir=dataset_root_dir,split=\"val\")\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=2, shuffle=True, drop_last=True)\n",
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=2, shuffle=False, drop_last=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
